2001-06-21  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf: added ECS_CVSID to all source files.

2001-06-20  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf: vrf.c, swq.c, swq.h, vrf.h, makefile

	Added full implementation of restricted_where support based on SWQ. 
	This adds brackets to expressions. 

2001-06-13  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf/*: Updated source headers.

	* ogdi/c-api/ecs_capabililties.c, ogdi/driver/dted/dted.c, 
	ogdi/driver/vrf/util.c, ogdi/driver/rpf/rpf.c: Fixed capabilities
	to match 6.2 spec (BoundingBox, resx, resy, LatLongBoundingBox). 

2001-05-30  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_import/ogdi_import.c: utilize layer capabitilies if 
	available to set region and resolution.

	* ogdi/drivers/rpf/rpf.c: Modified capabilities returned to have real
	information about each layer instead of just dummy global bounds info.

2001-05-04  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/gdal: added contributed GDAL raster server.

	* ogdi/c-api/client.c: clear autoCache in cln_SelectRegion().

2001-04-19  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_info/ogdi_info.c: improve region bounds reporting.

	* external/expat: config.h, makefile: make portable

	* external/expat/makefile, external/zlib/makefile: only create
	a dynamic library, not a static one.

	* external/expat/expat_ogdi.def: created.

	* config/common.mak: make soft link from libogdi.so to libogdi31.so 
	during install.

	* Updated test suite for dted/ecstile.c changes.

	Collectively the following fix DTED bug 233252.

	* ogdi/c-api/ecstile.c: fixed round off errors in calculation
	of t->linelength, and placed coord.x/y at center of pixel instead of
	the corner.

	* ogdi/drvers/dted/object.c: moved pos_y to the middle of the
	desired row.  Generated errors in unsupported functions.

	* ogdi/drivers/dted/dted.c: fixed bugs with computing nbfeature.

2001-04-16  Frank Warmerdam  <warmerdam@pobox.com>
