@@ -1,3 +1,7 @@
+2001-06-22  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* ogdi/include/ecs_util.h: Fixed typo in ECS_SETGEOMIMAGEVALUE().
+
 2001-06-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* ogdi/driver/vrf: added ECS_CVSID to all source files.
